objects/AE_SmartConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Key__c</fullName>
        <label>ACH Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_URL__c</fullName>
        <label>ACH URL</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultAccountingVariable1__c</fullName>
        <label>DefaultAccountingVariable1</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultAccountingVariable2__c</fullName>
        <label>DefaultAccountingVariable2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultBranch__c</fullName>
        <label>DefaultBranch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultGlAccount__c</fullName>
        <label>DefaultGlAccount</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultProjectTask__c</fullName>
        <label>DefaultProjectTask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultProject__c</fullName>
        <label>DefaultProject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultTaxGlAccount__c</fullName>
        <label>DefaultTaxGlAccount</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultTotalDelta__c</fullName>
        <label>DefaultTotalDelta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DefaultVendorEmail__c</fullName>
        <label>DefaultVendorEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DefaultVendor__c</fullName>
        <label>DefaultVendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationEmail__c</fullName>
        <label>DestinationEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>DocumentType</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionEmail__c</fullName>
        <label>ExceptionEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceIncoming__c</fullName>
        <label>InvoiceIncoming</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EmailToAp</fullName>
                </value>
                <value>
                    <fullName>EmailToCase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobLineItemCount__c</fullName>
        <label>JobLineItemCount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <defaultValue>&quot;en_US&quot;</defaultValue>
        <label>Locale</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OcrEmailBody__c</fullName>
        <label>OcrEmailBody</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PoLineItemCount__c</fullName>
        <label>PoLineItemCount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueueException__c</fullName>
        <label>QueueException</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueIncoming__c</fullName>
        <label>QueueIncoming</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnEmail__c</fullName>
        <label>ReturnEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SpecificationVersion__c</fullName>
        <label>SpecificationVersion</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TallyKey__c</fullName>
        <label>TallyKey</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TallyURL__c</fullName>
        <label>TallyURL</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnknownVendor__c</fullName>
        <label>UnknownVendor</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>AE_SmartConfiguration</label>
    <nameField>
        <label>AE_SmartConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE_SmartConfigurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>